tests/highlevel/test-outputs/transformer-redefine.out
*** executor ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 403, in _execute
    result, logs = await self._execute_local(
  File "/seamless/seamless/core/transformation.py", line 569, in _execute_local
    full_module_names = build_all_modules(
  File "/seamless/seamless/core/build_module.py", line 366, in build_all_modules
    mod = build_module(
  File "/seamless/seamless/core/build_module.py", line 326, in build_module
    mod = build_compiled_module(
  File "/seamless/seamless/core/build_module.py", line 254, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
g++ -c -O3 -ffast-math -march=native -fPIC -fopenmp -p -g -o /tmp/seamless-extensions/seamless_module_834025c276fbf5fc7e04a238fe9f51e2395b3ae1ee021a175aa00eb33b6fcb0a_module/main.o /tmp/seamless-extensions/seamless_module_834025c276fbf5fc7e04a238fe9f51e2395b3ae1ee021a175aa00eb33b6fcb0a_module/main.cpp
******************** ERROR ********************
/tmp/seamless-extensions/seamless_module_834025c276fbf5fc7e04a238fe9f51e2395b3ae1ee021a175aa00eb33b6fcb0a_module/main.cpp:1:1: error: ‘lambda’ does not name a type
    1 | lambda a,b: a + b
      | ^~~~~~

******************** /ERROR ********************
*** /executor ***

********************************************************************************

/*
The following C header has been auto-generated from the transformer schema
It will be used to generate bindings, but it will not be automatically
added to the compiled transformer code.

If your transformer code is written in C/C++, you may do so yourself.
For C, you may need to include "stdint.h" and "stdbool.h".
If your transform() function is written in C++, don't forget to add 'extern "C" '
*/

int transform(int a, int b, double *result);
********************************************************************************

g++ -c -O3 -ffast-math -march=native -fPIC -fopenmp -p -g -o /tmp/seamless-extensions/seamless_module_ddc81e9dc953985e1e54c944bbd1fefd8cd899621c7e31e780268559d6997082_module/main.o /tmp/seamless-extensions/seamless_module_ddc81e9dc953985e1e54c944bbd1fefd8cd899621c7e31e780268559d6997082_module/main.cpp


5.0
Status: OK
None
25
